Version 1.5 (2011-XX-XX)
------------------------------------------------------------------------------

* new `strip_splits` function removes splitting variables from the data frames
  returned by `ddply`.

* `join` now implements joins in a more SQL like way, returning all possible
   matches, not just the first one.  It is still a (little) faster than merge.
   The previous behaviour is accessible with `match = "first"`.

* `rename` moved in from reshape, and rewritten

* `rbind` now correctly maintains POSIXct tzone attributes

* `**ply` now works when passed a list of functions

* new `match_df` function makes it easy to subset a data frame to only contain
  values matching another data frame. Inspired by
  http://stackoverflow.com/questions/4693849

* `split_labels` correctly preserves empty factor levels, which means that
  `drop = FALSE` should work in more places. Use `base::droplevels` to remove
  levels that don't occur in the data, and `drop = T` to remove combinations
  of levels that don't occur.

* `rbind.fill` preserves missing factor levels

Version 1.4 (2011-01-03)
------------------------------------------------------------------------------

* `count` now takes an additional parameter `wt_var` which allows you to
  compute weighted sums. This is as fast, or faster than, `tapply` or `xtabs`.

* Really fix bug in `names.quoted`

* `.` now captures the environment in which it was evaluated. This should fix
  an esoteric class of bugs which no-one probably ever encountered, but will
  form the basis for an improved version of `ggplot2::aes`.

Version 1.3.1 (2010-12-30)
------------------------------------------------------------------------------

* Fix bug in `names.quoted` that interfered with ggplot2

Version 1.3 (2010-12-28)
------------------------------------------------------------------------------

NEW FEATURES

* new function `mutate` that works like transform to add new columns or