@@ -4,7 +4,6 @@ export(desc)
 export(colwise, numcolwise, catcolwise)
 export(count)
 export(as.data.frame.function)
-export(defaults)
 export(each)
 export(match_df)
 export(mutate)
